<resources>
    <string name="app_name">HerpApp</string>
    <string name="title_activity_splah_screen">SplahScreen</string>
    <string name="stringAnimales">Animales</string>
    <string name="stringComida">Alimento Vivo</string>
    <string name="HerpApp">HerpApp</string>
    <string name="StringEnciclopedia">Enciclopedia</string>
    <string name="StringMonitor">Seguimiento a Ejemplares</string>
    <string name="tituloAnimales">Animales</string>
    <string name="StringComida">Seguimiento Alimento</string>
    <string name="tituloComida">Alimento Vivo</string>
    <string name="registroAnimal">Registrar Animales</string>
    <string name="ConsultaAnimales">Consulta Animales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreAnimalconsulta">Nombre del Animal</string>
    <string name="tipoComida">Tipo de Alimento</string>
    <string name="IntervaloAlimento">Intervalo entre Alimentos</string>
    <string name="fechaComida">Inicio de Alimentos</string>
    <string name="especieAnimal">Especie del Animal</string>
    <string name="SubmitAnimal">Registrar</string>
    <string name="nombreComida">Nombre Alimento</string>
    <string name="fechaCambioComida">Cambio de Alimento</string>
    <string name="cantidadComida">Cantidad Alimento</string>
    <string name="registroComidas">Registro Alimento</string>
    <string name="ConsultaComida">consultaAlimento</string>
    <string name="nombreAnimalFr">Nombre Animal</string>
    <string name="nombreCientifico">nombreCientifico</string>
    <string name="nCientifico">Nombre Cientifico</string>
    <string name="ProximaComida">Proxima Comida</string>
    <string name="tipoAlimentoFragment">Tipo Alimento</string>
    <string name="nombreComidaFr">Nombre Alimento</string>
    <string name="cantidadAlimento">Cantidad Alimento</string>
    <string name="nombreCientificoMapa">Nombre Científico</string>
    <string name="nombreComunMapa">Nombre Comun</string>
    <string name="HabitatMapa">Hábitat</string>
    <string name="AlimentacionMapa">Alimentación</string>
    <string name="videosYoutube">Videos</string>
    <string name="PoblacionMapa">Población</string>
    <string name="tempMenu">Temperatura</string>
    <string name="RiesgoTemp">Temperatura</string>


    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>

</resources>
