<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.sebastianchimal.herpapp.RegistroAnimalesFragment">

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:id="@+id/nombreAnimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="10sp"
        android:hint="@string/nombreAnimalconsulta" />

    <EditText
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="10sp"
        android:id="@+id/tipoComida"
        android:layout_below="@+id/thingToDo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|center_vertical"
        android:hint="@string/tipoComida" />

    <EditText
        android:layout_marginBottom="20dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="10sp"
        android:id="@+id/intervaloComida"
        android:layout_below="@+id/thingToDo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|bottom"
        android:hint="@string/IntervaloAlimento" />

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="10sp"
        android:id="@+id/fechaComida"
        android:layout_below="@+id/thingToDo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|top"
        android:hint="@string/fechaComida" />

    <EditText
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:textSize="10sp"
        android:id="@+id/especieAnimal"
        android:layout_below="@+id/thingToDo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|center_vertical"
        android:hint="@string/especieAnimal" />

    <Button
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:text="@string/SubmitAnimal"
        android:id="@+id/botonRegistro"
        android:layout_gravity="right|bottom"
        android:background="@drawable/textura"
        android:textColor="#f0e8e8"
        />


</FrameLayout>
