<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastianchimal.herpapp.InformacionGeneralEspecie">



    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombreCientificoMapa"
        android:id="@+id/nombreCientifico"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombreComunMapa"
        android:id="@+id/nombreComun"
        android:layout_below="@+id/nombreCientifico"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/HabitatMapa"
        android:id="@+id/Habitat"
        android:layout_below="@+id/nombreComun"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AlimentacionMapa"
        android:id="@+id/Alimentacion"
        android:layout_below="@+id/Habitat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/videosYoutube"
        android:id="@+id/button"

        android:onClick="onYoutube"
        android:layout_alignTop="@+id/nombreCientifico"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/PoblacionMapa"
        android:id="@+id/button2"
        android:layout_below="@+id/nombreComun"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onGraficas" />

    <fragment
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/MapaAnimales"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/nombreCientifico" />

    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/tempMenu"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/Alimentacion"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="onTemperatura" />
</RelativeLayout>
