<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sebastianchimal.herpapp.registroComidaFragment">

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:id="@+id/nombreComida"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="10sp"
        android:hint="@string/nombreComida" />

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:id="@+id/cantidadComida"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="10sp"
        android:hint="@string/cantidadComida"
        android:layout_gravity="left|center_vertical" />

    <Button
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:text="@string/SubmitAnimal"
        android:id="@+id/registroComidaID"
        android:layout_gravity="right|bottom"
        android:background="@drawable/textura"
        android:textColor="#f0e8e8"
        />

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:id="@+id/cambioComida"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="10sp"
        android:hint="@string/fechaCambioComida"
        android:layout_gravity="right|top" />
</FrameLayout>
